Created description of Saag Paneer, added an image, and listed required  ingredients.

--- a/recipes/saagpaneer.html
+++ b/recipes/saagpaneer.html
@@ -8,5 +8,26 @@
 <body>
     <a href="../index.html">Home Page</a>
     <h1>Saag Paneer</h1>
+    <img src="../imgs/saagpaneer.jpg" alt="Bowl filled with creamy saag paneer featuring golden cubes of paneer cheese nestled in vibrant green spinach sauce, garnished with a sprinkle of spices, set on a rustic wooden table with warm, inviting lighting" width="300" height="200">
+    <h2>Your new favorite dish!</h2>
+    <p>Saag Paneer is a traditional North Indian dish made with a blend of leafy greens (commonly spinach, and sometimes mustard greens) cooked down into a smooth, spiced purée, and combined with soft cubes of paneer, a fresh Indian cheese that holds its shape when cooked.</p>
+    <h3>Ingredients:</h3>
+    <ul>
+        <li>Spinach (fresh or frozen) – 1 lb (450g)</li>
+        <li>Paneer – 200g to 250g (cut into cubes)</li>
+        <li>Onion – 1 medium, finely chopped</li>
+        <li>Garlic – 4 to 5 cloves, minced</li>
+        <li>Ginger – 1-inch piece, minced</li>
+        <li>Tomato – 1 medium, finely chopped</li>
+        <li>Cumin seeds – 1 tsp</li>
+        <li>Garam masala – 1 tsp</li>
+        <li>Ground coriander – 1 tsp</li>
+        <li>Ground cumin – ½ tsp</li>
+        <li>Turmeric – ¼ tsp</li>
+        <li>Red chili powder – ¼ tsp (adjust to taste)</li>
+        <li>Salt – to taste</li>
+
+    </ul>
+
 </body>
 </HTML>
