Finished the Saag paneer ingredient lists and steps to make.

--- a/recipes/saagpaneer.html
+++ b/recipes/saagpaneer.html
@@ -26,8 +26,56 @@
         <li>Turmeric – ¼ tsp</li>
         <li>Red chili powder – ¼ tsp (adjust to taste)</li>
         <li>Salt – to taste</li>
-
     </ul>
-
+    <h2>Instructions-</h2>
+    <h3>Step 1: Prep the Greens</h3>
+    <ol>
+        <li>Wash 1 lb (450g) spinach</li>
+        <li>Bring a large pot of water to a boil. Add the greens and blanch for 2–3 minutes.</li>
+        <li>Drain and immediately transfer to a bowl of ice water to preserve color.</li>
+        <li>Drain again and blend the greens into a coarse or smooth purée, depending on your texture preference. Set aside.</li>
+    </ol>
+    <h3>Step 2: Fry the Paneer</h3>
+    <ol>
+        <li>Cut paneer into cubes (~200–250g).</li>
+        <li>In a nonstick or cast iron pan, heat 1–2 tbsp oil or ghee over medium heat.</li>
+        <li>Lightly fry the paneer cubes until golden on all sides (optional).</li>
+        <li>Soak fried paneer in warm water for 10 minutes to keep it soft (optional), then drain and set aside.</li>
+    </ol>
+    <h3>Step 3: Make the Saag Base</h3>
+    <ol>
+        <li>Heat 2 tbsp oil or ghee in a pan.</li>
+        <li>Add 1 tsp cumin seeds and let them sizzle.</li>
+        <li>Add 1 finely chopped onion. Sauté until golden brown.</li>
+        <li>Add 4–5 minced garlic cloves and 1 inch minced ginger. Cook until fragrant.</li>
+        <li>Add 1 chopped tomato and cook until soft and oil starts to separate.</li>
+    </ol>
+    <h3>Step 4: Add Spices</h3>
+    <ol>
+        <li>Add:</li>
+    <ul>
+        <li>1 tsp ground coriander</li>
+        <li>½ tsp ground cumin</li>
+        <li>¼ tsp turmeric</li>
+        <li>¼ tsp red chili powder (adjust to taste)</li>
+        <li>Salt to taste</li>
+    </ul>
+        <li>Sauté the spices for a minute or two.</li>
+    </ol>
+    <h3>Step 5: Add the Greens</h3>
+    <ol>
+        <li>Add the blended greens to the pan.</li>
+        <li>Stir well and cook for 5–10 minutes on medium-low heat, adding a little water if it gets too thick.</li>
+        <li>Add 1 tsp garam masala and 1–2 tbsp cream or yogurt (optional) for richness.</li>
+    </ol>
+    <h3>Step 6: Finish with Paneer</h3>
+    <ol>
+        <li>Gently fold in the paneer cubes.</li>
+        <li>Simmer for 5 more minutes to let flavors combine.</li>
+    </ol>
+    <h3>Step 7: <em>Enjoy!</em></h3>
+    <ul>
+        <li>Serve hot with naan, chapati, paratha, or basmati rice.</li>
+    </ul>
 </body>
 </HTML>
