--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <h1>My Favorite Recipes</h1>
   <ul>
     <li><a href="./recipes/saagpaneer.html">Saag Paneer</a></li>
+  <h4>Recipes Coming Soon!</h4>
+    <li>Tacos de Bistec</li>
+    <li>Chicken Parmesan</li>
+    <li>Thai Green Curry</li>
+    <li>Tonkutsu Ramen</li>
   </ul>
 </body>
 </HTML>
